Added tuned hyper-parameters

--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_income/ACS_Income_Batch2-Copy1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_income/ACS_Income_Batch2-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e8f15217",
+   "id": "8e52f544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a5e113c",
+   "id": "c0d4eac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "067a19d0",
+   "id": "603fd36f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "716ed595",
+   "id": "65c5b442",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b2a434c5",
+   "id": "cb9e77e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b19a1087",
+   "id": "969fa6ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a17fee",
+   "id": "7dfe049c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66d7a699",
+   "id": "6209233c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93105323",
+   "id": "a5c16364",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1fbceec6",
+   "id": "338563d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd762670",
+   "id": "9b9ebb8c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "753a40dc",
+   "id": "907e9262",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fd042a47",
+   "id": "a6eeecc7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2ad1ef06",
+   "id": "636b0060",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2cfde8c",
+   "id": "fdb8571d",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7009b900",
+   "id": "ba0403f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b362b8f5",
+   "id": "f2b8a86f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb2aef26",
+   "id": "d37dc879",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "633519b1",
+   "id": "785d7872",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3248feec",
+   "id": "8326a7f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d49fb937",
+   "id": "c6ad2fc0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edfa49d6",
+   "id": "04029397",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebc49014",
+   "id": "b0a454ad",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -630,8 +630,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e3d97f1d",
+   "execution_count": 11,
+   "id": "4c7d9ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,15 +652,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a87e5fa7",
+   "execution_count": null,
+   "id": "ea0d93f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
      "start_time": "2024-01-06T16:44:52.137007Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-06 12:59:29 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "INFO:root:Start an experiment iteration for the following custom params:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_split_seed': 200,\n",
+      " 'experiment_iteration': 'Exp_iter_2',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'model_init_seed': 200,\n",
+      " 'session_uuid': 'ac796b56-9c83-474a-8e7a-2d95ee5efa7e'}\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ee9c7e17dc24b9da2fc7e83df64d85f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple alphas:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-06 12:59:30 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n",
+      "2024-01-06 12:59:30 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "INFO:root:Models config is loaded from the input file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.0\n",
+      "Skip preprocessing\n",
+      "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
+      "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
+      "       'cat__SCHL_17', 'cat__SCHL_18',\n",
+      "       ...\n",
+      "       'cat__RELP_2', 'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5',\n",
+      "       'cat__RELP_6', 'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP',\n",
+      "       'num__WKHP'],\n",
+      "      dtype='object', length=729)\n",
+      "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 6043,  3745,  5159,  7241,  7820,  3695, 11501, 11432,  1163,\n",
+      "             8994,  7972,  2554,  9884,  2008,  6884, 11995,  5200,  4649,\n",
+      "            10244, 13775],\n",
+      "           dtype='int64')\n",
+      "Top indexes of an y_test in the current base flow dataset:  Int64Index([ 6043,  3745,  5159,  7241,  7820,  3695, 11501, 11432,  1163,\n",
+      "             8994,  7972,  2554,  9884,  2008,  6884, 11995,  5200,  4649,\n",
+      "            10244, 13775],\n",
+      "           dtype='int64')\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_income/tuning_results_Folktables_GA_2018_Income_alpha_0.0_20240106__174729.csv\n",
+      "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 200, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91217dfe9ee344f595217da164aca6b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46a80fefa5484e36bfb6a30958a3a036",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "run_exp_iter_with_disparate_impact(data_loader=exp_iter_data_loader,\n",
     "                                   experiment_seed=experiment_seed,\n",
@@ -680,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b7221b6",
+   "id": "1c769a95",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -689,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f11dbd30",
+   "id": "10ccd76a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6ecdb9e7",
+   "id": "4d7296a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -738,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e06b924",
+   "id": "c3832f4e",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -747,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6cb58347",
+   "id": "9784ecc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cfd1255d",
+   "id": "0233148c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -796,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940b127b",
+   "id": "db21b856",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -805,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8e6f5395",
+   "id": "db114bdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a8b12f0e",
+   "id": "734cfa20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -854,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a7729d9",
+   "id": "4f610dc4",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -863,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0461dde4",
+   "id": "bbb3155b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "534165b1",
+   "id": "b94a6f07",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -913,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "371ef4f0",
+   "id": "b603a442",
    "metadata": {},
    "outputs": [],
    "source": []
